# MediaRINHv2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
conf/: database.py  settings.py  urls.py
migrations/: env.py  script.py.mako
migrations/versions/: e799a48f016d_.py  fb1b0b52a9e8_user_table.py
src/: main.py  responses.py  types.py  validators.py
src/account/: models.py  router.py  schemas.py  service.py  types.py  utils.py
src/account/auth/: auth_bearer.py  dependencies.py
src/chat/: router.py
templates/chat/: index.html
